// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard converter convert dashboard should convert dashboard with export temp filter context 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": "/tempFilterContext",
      "layout": undefined,
      "widgets": Array [],
    },
    "meta": Object {
      "identifier": "dashboardWithTempFilterContext",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "dashboardWithTempFilterContext",
      "unlisted": 1,
      "uri": "/gdc/md/obj/dashboardWithTempFilterContext",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with extended date filters config 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "dateFilterConfig": Object {
        "addPresets": Object {
          "relativePresets": Array [
            Object {
              "from": -6,
              "granularity": "GDC.time.month",
              "localIdentifier": "plus_minus_6_months",
              "name": "+/- 6 months",
              "to": 6,
              "visible": true,
            },
          ],
        },
        "filterName": "Extended filter",
        "hideGranularities": Array [
          "GDC.time.quarter",
        ],
        "mode": "readonly",
      },
      "filterContext": undefined,
      "layout": undefined,
      "widgets": Array [],
    },
    "meta": Object {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with filter context 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": "/gdc/md/obj/filterContext",
      "layout": undefined,
      "widgets": Array [],
    },
    "meta": Object {
      "identifier": "dashboardWithFilterContext",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "dashboardWithFilterContext",
      "unlisted": 1,
      "uri": "/gdc/md/obj/dashboardWithFilterContext",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with layout 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": undefined,
      "layout": Object {
        "fluidLayout": Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 12,
                    },
                  },
                },
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 6,
                    },
                  },
                },
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 2,
                    },
                  },
                },
              ],
              "header": Object {
                "title": "Section 1",
              },
            },
            Object {
              "columns": Array [],
              "header": Object {
                "description": "Section 2 description",
              },
            },
          ],
        },
      },
      "widgets": Array [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": Object {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with layout with custom gridHeight 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": undefined,
      "layout": Object {
        "fluidLayout": Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "height": 10,
                      "width": 12,
                    },
                  },
                },
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "height": 6,
                      "width": 6,
                    },
                  },
                },
              ],
              "header": Object {
                "title": "Section 1",
              },
            },
            Object {
              "columns": Array [
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "height": 30,
                      "width": 2,
                    },
                  },
                },
              ],
              "header": Object {
                "description": "Section 2 description",
              },
            },
          ],
        },
      },
      "widgets": Array [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": Object {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert dashboard with layout with empty row headers 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": undefined,
      "layout": Object {
        "fluidLayout": Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 12,
                    },
                  },
                },
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 6,
                    },
                  },
                },
                Object {
                  "content": Object {
                    "widget": Object {
                      "qualifier": Object {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": Object {
                    "xl": Object {
                      "width": 2,
                    },
                  },
                },
              ],
            },
            Object {
              "columns": Array [],
            },
          ],
        },
      },
      "widgets": Array [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": Object {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter convert dashboard should convert empty dashboard 1`] = `
Object {
  "analyticalDashboard": Object {
    "content": Object {
      "filterContext": undefined,
      "layout": undefined,
      "widgets": Array [],
    },
    "meta": Object {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter convert drill should convert drill to dashboard with drill from attribute 1`] = `
Object {
  "drillToDashboard": Object {
    "from": Object {
      "drillFromAttribute": Object {
        "localIdentifier": "attributeLocalIdentifier",
      },
    },
    "target": "in-place",
    "toDashboard": "someDashboardId",
  },
}
`;

exports[`dashboard converter convert drill should convert drill to dashboard with drill from measure 1`] = `
Object {
  "drillToDashboard": Object {
    "from": Object {
      "drillFromMeasure": Object {
        "localIdentifier": "measureLocalIdentifier",
      },
    },
    "target": "in-place",
    "toDashboard": "someDashboardId",
  },
}
`;

exports[`dashboard converter convert filter context should convert filter context 1`] = `
Object {
  "filterContext": Object {
    "content": Object {
      "filters": Array [
        Object {
          "dateFilter": Object {
            "attribute": "/attrId",
            "dataSet": "/dataSet",
            "from": "-12",
            "granularity": "GDC.time.month",
            "to": "-2",
            "type": "relative",
          },
        },
      ],
    },
    "meta": Object {
      "identifier": "filterContext",
      "summary": "",
      "title": "filterContext",
      "uri": "/gdc/md/obj/filterContext",
    },
  },
}
`;

exports[`dashboard converter convert filter context should convert temp filter context 1`] = `
Object {
  "tempFilterContext": Object {
    "created": "2020-05-05 00:00:00",
    "filters": Array [
      Object {
        "dateFilter": Object {
          "attribute": "/attrId",
          "dataSet": "/dataSet",
          "from": "-12",
          "granularity": "GDC.time.month",
          "to": "-2",
          "type": "relative",
        },
      },
    ],
    "uri": "/tempFilterContext",
  },
}
`;

exports[`dashboard converter convert widget should convert kpi widget 1`] = `
Object {
  "kpi": Object {
    "content": Object {
      "comparisonDirection": "growIsGood",
      "comparisonType": "lastYear",
      "dateDataSet": undefined,
      "drillTo": undefined,
      "ignoreDashboardFilters": Array [],
      "metric": "/measure",
    },
    "meta": Object {
      "identifier": "widgetKpi",
      "summary": "",
      "title": "widgetKpi",
      "uri": "/gdc/md/obj/widgetKpi",
    },
  },
}
`;

exports[`dashboard converter convert widget should convert kpi widget with drilling 1`] = `
Object {
  "kpi": Object {
    "content": Object {
      "comparisonDirection": "growIsGood",
      "comparisonType": "lastYear",
      "dateDataSet": undefined,
      "drillTo": Object {
        "projectDashboard": "oldDashboardUri",
        "projectDashboardTab": "tab1",
      },
      "ignoreDashboardFilters": Array [],
      "metric": "/measure",
    },
    "meta": Object {
      "identifier": "widgetKpi",
      "summary": "",
      "title": "widgetKpi",
      "uri": "/gdc/md/obj/widgetKpi",
    },
  },
}
`;

exports[`dashboard converter convert widget should convert visualization widget 1`] = `
Object {
  "visualizationWidget": Object {
    "content": Object {
      "dateDataSet": undefined,
      "drills": Array [],
      "ignoreDashboardFilters": Array [],
      "visualization": "/headline",
    },
    "meta": Object {
      "identifier": "widgetHeadline",
      "summary": "",
      "title": "widgetHeadline",
      "uri": "/gdc/md/obj/widgetHeadline",
    },
  },
}
`;
